--- a/templates/modules/header.html
+++ b/templates/modules/header.html
@@ -1,6 +1,10 @@
-<head>
-<link type="text/css" rel"stylesheet" href = "style/MainStyles.css" />
-<div class="header">
-  Test text
+{% include 'modules/fonts.html' %}
+
+<link rel="stylesheet" type="text/css" href="/static/MainStyles.css">
+
+<header class="main-header" role="banner">
+  <img src = "/static/images/flask-logo.png" />
+    <h2>Flask</h2>
+</header>
+
 </div>
-</head>
