--- a/static/MainStyles.css
+++ b/static/MainStyles.css
@@ -1,10 +1,42 @@
-.header{
-  position:fixed;
-  top: 0;
-  left: 0;
-  background: #F0F0F0;
-  border: 1px solid #CCC;
-  margin: 0px auto;
-  height:50px;
-  width:100%;
+/* --- MISC --- */
+
+.container{
+  padding-left: 15%;
+  padding-right: 15%;
 }
+
+.container h2 {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 30px;
+}
+
+/* --- HEADER --- */
+.main-header {
+  width: 100%;
+  height: 50px;
+  border-bottom: 1px solid;
+  border-color: #D3D3D3;
+  top: 0;
+  overflow: hidden;
+  background-color: #FFFFFF;
+}
+
+.main-header h2{
+  font-family: 'Montserrat', sans-serif;
+  font-size: 35px;
+  margin-top: 3px;
+  padding-right: 10px;
+  border-right: 1px solid;
+  border-color: #D3D3D3;
+  float: left;
+}
+
+.main-header img{
+  max-height: 50px;
+  max-width: auto;
+  float: left;
+  padding-right: 10px;
+  top: 0;
+}
+
+/*
