--- a/templates/hello.html
+++ b/templates/hello.html
@@ -1,9 +1,11 @@
 <!doctype html>
+
 {% include 'modules/header.html' %}
 
 <title>Hello from Flask</title>
-{% if name %}
-  <h1>Hello {{ name }}!</h1>
-{% else %}
-  <h1>Hello, World!</h1>
-{% endif %}
+
+<div class = "container">
+
+<h2 >Hello, World!</h2>
+
+</div>
