--- a/templates/modules/header.html
+++ b/templates/modules/header.html
@@ -3,8 +3,17 @@
 <link rel="stylesheet" type="text/css" href="/static/MainStyles.css">
 
 <header class="main-header" role="banner">
-  <img src = "/static/images/flask-logo.png" />
+ <a href = "/">
+  <img src = "/static/images/flask-logo.png"></img>
     <h2>Flask</h2>
+  </a>
+
+  <div class = "navigation">
+    <h2> <a href = "/hello/">Hello</a></h2>
+    <h2>Forms</h2>
+
+  </div>
+
 </header>
 
 </div>
