--- a/static/MainStyles.css
+++ b/static/MainStyles.css
@@ -28,6 +28,7 @@
   padding-right: 10px;
   border-right: 1px solid;
   border-color: #D3D3D3;
+  color: #000000;
   float: left;
 }
 
@@ -35,8 +36,21 @@
   max-height: 50px;
   max-width: auto;
   float: left;
-  padding-right: 10px;
+  padding-right: 7px;
   top: 0;
 }
 
-/*
+.navigation h2{
+  font-family: 'Montserrat', sans-serif;
+  font-size: 35px;
+  margin-top: 3px;
+  padding-left: 10px;
+  border-left: 1px solid;
+  border-color: #D3D3D3;
+  float: right;
+}
+
+.navigation a{
+  color: inherit;
+  text-decoration:none;
+}
