--- a/templates/modules/header.html
+++ b/templates/modules/header.html
@@ -3,17 +3,15 @@
 <link rel="stylesheet" type="text/css" href="/static/MainStyles.css">
 
 <header class="main-header" role="banner">
+
  <a href = "/">
   <img src = "/static/images/flask-logo.png"></img>
-    <h2>Flask</h2>
+  <h1>Flask</h1>
   </a>
 
-  <div class = "navigation">
-    <h2> <a href = "/hello/">Hello</a></h2>
-    <h2>Forms</h2>
-
-  </div>
-
+  <h2> <a href = "/navigation/">Navigation</a></h2>
+  <h2> <a href = "/hello/">Hello</a></h2>
+  
 </header>
 
 </div>
