--- a/static/MainStyles.css
+++ b/static/MainStyles.css
@@ -21,7 +21,7 @@
   background-color: #FFFFFF;
 }
 
-.main-header h2{
+.main-header h1{
   font-family: 'Montserrat', sans-serif;
   font-size: 35px;
   margin-top: 3px;
@@ -40,17 +40,21 @@
   top: 0;
 }
 
-.navigation h2{
+.main-header h2{
   font-family: 'Montserrat', sans-serif;
   font-size: 35px;
   margin-top: 3px;
   padding-left: 10px;
+  padding-right: 10px;
   border-left: 1px solid;
   border-color: #D3D3D3;
   float: right;
 }
 
-.navigation a{
+.main-header a{
   color: inherit;
   text-decoration:none;
+}
+.main-header a:hover{
+  text-decoration: underline;
 }
