--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -1,18 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+{% include 'modules/header.html' %}
+
 <head>
-    <title>My Webpage</title>
+    <title>Navigation</title>
 </head>
+
 <body>
-    <ul id="navigation">
-    {% for item in navigation %}
-        <li><a href="{{ item.href }}">{{ item.caption }}</a></li>
-    {% endfor %}
-    </ul>
-
-    <h1>My Webpage</h1>
-    {{ a_variable }}
-
-    {# a comment #}
+<div class = "container">
+    <h2>Navigation Page!</h2>
+</div>
 </body>
 </html>
