--- a/templates/modules/header.html
+++ b/templates/modules/header.html
@@ -4,14 +4,15 @@
 
 <header class="main-header" role="banner">
 
- <a href = "/">
-  <img src = "/static/images/flask-logo.png"></img>
-  <h1>Flask</h1>
-  </a>
+<div class = "navi-content">
+  <img src = "static\images\flask-logo.png" />
+  <div class = "navi-content-hidden">
+    <a href="/">Home</a>
+    <a href="/navigation/">Navigation</a>
+    <a href="/login/">Login</a>
+  </div>
+</div>
 
-  <h2> <a href = "/navigation/">Navigation</a></h2>
-  <h2> <a href = "/hello/">Hello</a></h2>
-  
 </header>
 
-</div>
+<div class = "spacer"></div>
