--- a/static/MainStyles.css
+++ b/static/MainStyles.css
@@ -1,4 +1,4 @@
-/* --- MISC --- */
+/* --- Container --- */
 
 .container{
   padding-left: 15%;
@@ -10,45 +10,60 @@
   font-size: 30px;
 }
 
+.container p{
+  font-family: 'Montserrat', sans-serif;
+  font-size: 20px;
+}
 /* --- HEADER --- */
+
 .main-header {
   width: 100%;
+  position: fixed;
   height: 50px;
-  border-bottom: 1px solid;
-  border-color: #D3D3D3;
   top: 0;
-  overflow: hidden;
-  background-color: #FFFFFF;
+  overflow: visible;
+  background-color: #515151;
+  z-index: 0;
 }
 
 .main-header h1{
   font-family: 'Montserrat', sans-serif;
-  font-size: 35px;
-  margin-top: 3px;
+  font-size: 41px;
+  margin-top: 0px;
   padding-right: 10px;
   border-right: 1px solid;
   border-color: #D3D3D3;
-  color: #000000;
+  color: white;
   float: left;
 }
 
 .main-header img{
   max-height: 50px;
   max-width: auto;
-  float: left;
   padding-right: 7px;
+  padding-left: 7px;
   top: 0;
 }
 
 .main-header h2{
   font-family: 'Montserrat', sans-serif;
-  font-size: 35px;
-  margin-top: 3px;
-  padding-left: 10px;
-  padding-right: 10px;
-  border-left: 1px solid;
-  border-color: #D3D3D3;
+  font-size: 30px;
+  transition: all 0.3s ease 0s;
+  margin-top: 0px;
+  text-align: center;
+  color: white;
+}
+
+.header-container{
+  width: 200px;
+  padding: 13px;
+  border-right: 1px solid white;
+  border-left: 1px solid white;
   float: right;
+}
+
+.main-header h2:hover{
+  border-bottom: 3px solid white;
 }
 
 .main-header a{
@@ -57,4 +72,70 @@
 }
 .main-header a:hover{
   text-decoration: underline;
+}
+
+.main-header button{
+  color: white;
+  padding: 7px;
+  padding-left: 10px;
+  border-left: 1px solid;
+  border-color: #D3D3D3;
+  background-color: #515151;
+  font-size: 16px;
+  max-height: 50px;
+  border-right: none;
+  border-top: none;
+  border-bottom: none;
+}
+
+.spacer { margin-top: 75px; }
+
+
+/* --- FOOTER --- */
+
+.footer{
+  width: 100%;
+  height: 100px;
+  background-color: #e8e8e8;
+  bottom: 0;
+}
+
+.footer img{
+  float: left;
+  max-height: 50px;
+}
+
+/* --- NAVIGATION --- */
+
+.navi-content {
+    position: relative;
+    float: left;
+    display: inline-block;
+}
+
+.navi-content-hidden {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.navi-content-hidden a{
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.navi-content-hidden a:hover {background-color: #ddd}
+
+.navi-content:hover .navi-content-hidden {
+    display: block;
+}
+
+/* MISC */
+html, body {
+ margin: 0;
 }
