--- a/templates/login.html
+++ b/templates/login.html
@@ -2,10 +2,12 @@
 
 {% include 'modules/header.html' %}
 
-<title>Hello</title>
+<title>Login</title>
 
 <div class = "container">
 
-<h2 >Hello, World!</h2>
+<h2>Please log-in below:</h2>
 
 </div>
+
+{% include 'modules/footer.html' %}
