--- a/templates/modules/header.html
+++ b/templates/modules/header.html
@@ -5,14 +5,17 @@
 <header class="main-header" role="banner">
 
 <div class = "navi-content">
-  <img src = "static\images\flask-logo.png" />
+  <img src = "\static\images\flask-logo.png" />
   <div class = "navi-content-hidden">
     <a href="/">Home</a>
     <a href="/navigation/">Navigation</a>
     <a href="/login/">Login</a>
   </div>
 </div>
-
+<div class = "header-container">
+<img src = "\static\images\Icons\House.png" />
+<img src = "\static\images\Icons\Key.png" />
+</div>
 </header>
 
 <div class = "spacer"></div>
