Second header overhaul
Changed the color scheme of the header to be more aesthetically pleasing.

Removed some unnecessary code from MainStyles.css.

--- a/templates/modules/header.html
+++ b/templates/modules/header.html
@@ -3,18 +3,25 @@
 <link rel="stylesheet" type="text/css" href="/static/MainStyles.css">
 
 <header class="main-header" role="banner">
-
-<div class = "navi-content">
-  <img src = "\static\images\flask-logo.png" />
-  <div class = "navi-content-hidden">
-    <a href="/">Home</a>
-    <a href="/navigation/">Navigation</a>
-    <a href="/login/">Login</a>
-  </div>
-</div>
 <div class = "header-container">
+
+<a href = "\">
+<div class = "logo">
+  <img src = "\static\images\flask-logo.png" />
+</div>
+</a>
+
+<a href = "/">
 <img src = "\static\images\Icons\House.png" />
+</a>
+
+
+
+<a href = "/login/">
 <img src = "\static\images\Icons\Key.png" />
+</a>
+</div>
+
 </div>
 </header>
 
