--- a/static/MainStyles.css
+++ b/static/MainStyles.css
@@ -21,21 +21,12 @@
   position: fixed;
   height: 50px;
   top: 0;
-  overflow: visible;
-  background-color: #515151;
+  overflow: hidden;
+  border-bottom: 1px solid lightgrey;
+  background-color: #FFFFFF;
   z-index: 0;
 }
 
-.main-header h1{
-  font-family: 'Montserrat', sans-serif;
-  font-size: 41px;
-  margin-top: 0px;
-  padding-right: 10px;
-  border-right: 1px solid;
-  border-color: #D3D3D3;
-  color: white;
-  float: left;
-}
 
 .main-header img{
   max-height: 50px;
@@ -45,46 +36,30 @@
   top: 0;
 }
 
-.main-header h2{
-  font-family: 'Raleway', sans-serif;
-  font-size: 30px;
-  transition: all 0.3s ease 0s;
-  margin-top: 0px;
-  text-align: center;
-  color: white;
-}
 
 .header-container img{
-  float:right;
+  float: right;
   max-height: 40px;
-  padding-top: 5px;
+  padding-top: 7px;
+  padding-right: 10px;
 }
 
-.main-header h2:hover{
-  border-bottom: 3px solid white;
+.header-container img:hover{
+  border-bottom: 3px solid #32A3FF;
+  transition: all 0.3s ease 0s;
 }
+
+.header-container{
+  border-left: 3px solid white;
+  height: 50px;
+}
+
 
 .main-header a{
   color: inherit;
   text-decoration:none;
 }
-.main-header a:hover{
-  text-decoration: underline;
-}
 
-.main-header button{
-  color: white;
-  padding: 7px;
-  padding-left: 10px;
-  border-left: 1px solid;
-  border-color: #D3D3D3;
-  background-color: #515151;
-  font-size: 16px;
-  max-height: 50px;
-  border-right: none;
-  border-top: none;
-  border-bottom: none;
-}
 
 .spacer { margin-top: 75px; }
 
@@ -105,31 +80,11 @@
 
 /* --- NAVIGATION --- */
 
-.navi-content {
+.logo {
     position: relative;
     float: left;
-    display: inline-block;
 }
 
-.navi-content-hidden {
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-}
-
-.navi-content-hidden a{
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
-
-.navi-content:hover .navi-content-hidden {
-    display: block;
-}
 
 /* MISC */
 html, body {
