--- a/static/MainStyles.css
+++ b/static/MainStyles.css
@@ -6,12 +6,12 @@
 }
 
 .container h2 {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Libre Franklin', sans-serif;
   font-size: 30px;
 }
 
 .container p{
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Libre Franklin', sans-serif;
   font-size: 20px;
 }
 /* --- HEADER --- */
@@ -29,18 +29,10 @@
 }
 
 
-.main-header img{
-  max-height: 50px;
-  max-width: auto;
-  padding-right: 7px;
-  padding-left: 7px;
-  top: 0;
-}
-
 
 .header-container img{
   float: right;
-  max-height: 40px;
+  max-height: 41px;
   padding-top: 5px;
   padding-right: 10px;
 }
@@ -70,13 +62,22 @@
 .footer{
   width: 100%;
   height: 100px;
-  background-color: #e8e8e8;
+  background-color: #f2f2f2;
   bottom: 0;
 }
 
 .footer img{
-  float: left;
-  max-height: 50px;
+  float: right;
+  max-height: 35px;
+}
+
+.footer img:hover{
+  transition: all 0.3s ease 0s;
+  border-top: 3px solid #32A3FF;
+}
+
+.footer a{
+  padding-left: 10px;
 }
 
 /* --- NAVIGATION --- */
