--- a/templates/modules/fonts.html
+++ b/templates/modules/fonts.html
@@ -1,2 +1,2 @@
-<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" />
-<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+
+<link href="//fonts.googleapis.com/css?family=Libre+Franklin|Open+Sans+Condensed:300" rel="stylesheet">
