--- a/templates/modules/footer.html
+++ b/templates/modules/footer.html
@@ -1,5 +1,9 @@
 <footer class = "footer">
-<img src = "/static/images/flask-logo.png"></img>
+
 <div class = "container">
-  <p> Footer </p>
+<a href = "#top">
+<img src="static\images\Icons\Arrow.png"></img>
+</a>
+
+</div>
 </footer>
