--- a/templates/modules/header.html
+++ b/templates/modules/header.html
@@ -6,18 +6,21 @@
 <div class = "header-container">
 
 <a href = "\">
-<div class = "logo">
-  <img src = "\static\images\flask-logo.png" />
-</div>
+<p style = "float: left; color: white; background-color: #32A3FF;">Flask</p>
 </a>
 
 <a href = "/">
-<img src = "\static\images\Icons\House.png" />
+<p>Home</p>
 </a>
 
 <a href = "/login/">
-<img src = "\static\images\Icons\Key.png" />
+<p>Login</p>
 </a>
+
+<a href = "/navigation/">
+<p>Navigation</p>
+</a>
+
 </div>
 
 </div>
