--- a/templates/index.html
+++ b/templates/index.html
@@ -2,12 +2,13 @@
 
 {% include 'modules/header.html' %}
 
-<title>Flask</title>
 
 <div class = "container">
 
-<h2>Index Page!</h2>
+<div class = "Introduction">
+<h2>Hey there,</h2>
 
+<img src ="static\images\SamJ.png" style = "float: right; max-height: 200px; width: auto; border-radius: 15px; margin-left: 10px;"/>
 <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
    laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
    architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas
@@ -21,6 +22,7 @@
         in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem
          eum fugiat quo voluptas nulla pariatur?
        </p>
+</div>
        <br>
        <br>
        <br>
@@ -41,50 +43,7 @@
        <br>
        <br>
        <br>
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
+
 
 </div>
 
