--- a/templates/modules/footer.html
+++ b/templates/modules/footer.html
@@ -1,8 +1,17 @@
 <footer class = "footer">
+<div class = "Footer_Container">
+<br>
+<div class = "Text-Left" style = "float: left;">
+<p>This website was coded using CSS, HTML and a smidge of Jquery. </p>
+<p>If you're interested in seeing its (very messy) development process, take a gander on my Github.</p>
+</div>
 
-<div class = "container">
+<a href = "https://twitter.com/BritishFerrets?lang=en"> <img src = "\static\images\Icons\Twitter.png" /> </a>
+<a href = "https://www.facebook.com/profile.php?id=100006727574723"> <img src = "\static\images\Icons\Facebook.png" /> </a>
+<a href = "https://www.linkedin.com/in/samuel-jule/"> <img src = "\static\images\Icons\Linkedin.png" /> </a>
+<a href = "https://github.com/S-Comic"> <img src = "\static\images\Icons\GitHub.png" /> </a>
+
 <a href = "#top">
-<img src="static\images\Icons\Arrow.png"></img>
 </a>
 
 </div>
