Preparation for mobile compatability
Added some basic media queries to test on mobile devices.

Header has been slightly streamlined.

--- a/templates/modules/header.html
+++ b/templates/modules/header.html
@@ -10,7 +10,7 @@
 $(window).scroll(function() {
     var headscroll = $(window).scrollTop();
 
-    if (headscroll >= 20) {
+    if (headscroll >= 35) {
         $(".main-header").addClass("shadow");
     } else {
         $(".main-header").removeClass("shadow");
@@ -27,13 +27,17 @@ $(window).scroll(function() {
 <p style = "float: left; color: white; background-color: #32A3FF;">Samuel Jule</p>
 </a>
 
+<p style = "margin-left: 10px; margin-right; 10px;">
 <a href = "/">
-<p>Home</p>
+Home
 </a>
+</p>
 
+<p style = "margin-left: 10px; margin-right; 10px;">
 <a href = "/writing/">
-<p>Writing</p>
+Writing
 </a>
+</p>
 
 <a href = "https://github.com/S-Comic">
 <p>Coding</p>
