--- a/static/MainStyles.css
+++ b/static/MainStyles.css
@@ -59,8 +59,8 @@
   font-family: 'News Cycle', sans-serif;
   float: right;
   padding-left: 10px;
+  border-bottom: 3px solid #32A3FF;
   padding-right: 10px;
-  border-left: 1px solid #e5e5e5;
   font-size: 30px;
   margin: 0px;
 }
@@ -126,6 +126,25 @@
   width: auto;
 }
 
+/* MOBILE */
+
+@media screen and (max-width: 400px) {
+  .container p {
+    line-height: 80%;
+  }
+  .shadow{
+    position: fixed;
+  }
+  .main-header{
+    height: 150px;
+  }
+  .main-header p{
+    font-size: 50px;
+  }
+  .footer{
+    height: 100px;
+  }
+}
 
 /* MISC */
 html, body {
