--- a/static/MainStyles.css
+++ b/static/MainStyles.css
@@ -128,7 +128,7 @@
 
 /* MOBILE */
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 667px) and (-webkit-min-device-pixel-ratio: 2){
   .container p {
     line-height: 80%;
   }
