--- a/templates/modules/header.html
+++ b/templates/modules/header.html
@@ -23,15 +23,11 @@ $(window).scroll(function() {
 <header class="main-header" role="banner">
 <div class = "header-container">
 
+<div class = "logo">
 <a href = "\">
 <p style = "float: left; color: white; background-color: #32A3FF;">Samuel Jule</p>
 </a>
-
-<p style = "margin-left: 10px; margin-right; 10px;">
-<a href = "/">
-Home
-</a>
-</p>
+</div>
 
 <p style = "margin-left: 10px; margin-right; 10px;">
 <a href = "/writing/">
@@ -40,8 +36,14 @@ Writing
 </p>
 
 <a href = "https://github.com/S-Comic">
-<p>Coding</p>
+<p style = "margin-left: 10px; margin-right; 10px;">Coding</p>
 </a>
+
+<p style = "margin-left: 10px; margin-right; 10px;">
+<a href = "/">
+Home
+</a>
+</p>
 
 </div>
 
