Added Index Content
Added some context to the index page to test content on mobile.

Changes the way the header animates to make it more smooth.

Other minor changes.

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,44 +5,48 @@
 
 <div class = "container">
 
-<div class = "Introduction">
-<h2>Hey there,</h2>
+<h2>Call me Sam.</h2>
 
 <img src ="static\images\SamJ.png" style = "float: right; max-height: 200px; width: auto; border-radius: 15px; margin-left: 10px;"/>
-<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
-   laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
-   architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas
-    sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
-     voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor</P>
+<p>I'm Samuel Jule, a year 12 student currently studying for A-Levels at hautlieu school.
+As you can probably tell by the website, I'm hugely into coding, electronics ,and anything
+even remotely technology related. I'm proficient in python, CSS and HTML, and I'm learning
+Javascript to further my knowledge. I've learnt these languages by working on projects in my
+own time, and by collaborating with others. Whenever I have free time, I'll have an IDE open.</P>
 
-      <p>sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora
-      incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima
-       veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut
-        aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui
-        in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem
-         eum fugiat quo voluptas nulla pariatur?
-       </p>
-</div>
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
+<h3>Education</h3>
+<p>
+Before moving to Hautlieu for year 10, I attended De La Salle College from year 7 to year 9.
+I greatly enjoyed my time there, however I felt that my education would be greatly improved if I transfered
+to Hautlieu school.</p>
+
+<span>
+<p><b>FCJ Primary school </b> - Years 1 to 4</p>
+<p><b>De La Salle Primary</b> - Years 5 to 6</p>
+<p><b>De La Salle College</b> - Years 7 to 10</p>
+<p><b>Hautlieu School    </b> - Years 11 to Ongoing</p>
+</span>
+
+<h3>Academic Achievements</h3>
+<p>After completing my GCSE exams, I walked away with multiple GCSEs in my subjects,
+as well as one half-GCSE in religious studies from De La Salle College.
+<p><b>GCSE Qualifications</b></p></p>
+<p><span>Computer studies - Mathematics - Physics - Business studies - DT Graphic products
+ - </span></p></p>
+
+ <p><b>AS Qualifications</b></p></p>
+ <p><span>Working on it!</span></p></p>
+
+<h3>Previous work</h3>
+<p>In the past, I've worked on projects, both large and small, to further my knowledge
+ and gain valuable experience.</p>
+ <span>
+<p>- Starting in late 2017 I begain working with the Jersey Policy Forum
+  to aid in the development of their new webpage as a   technology associate.</p>
+<p>- I acheived third place in the 2015 Youth Hackathon working with a friend.</p>
+<p>- I completed two weeks of work experience with TBC Consulting, a software company.</p>
+</span>
+<br>
 
 
 </div>
