--- a/static/MainStyles.css
+++ b/static/MainStyles.css
@@ -1,3 +1,5 @@
+/* MISC */
+
 html,body
 {
     width: 100%;
@@ -5,7 +7,10 @@ html,body
     margin: 0px;
     padding: 0px;
 }
-/* --- Container --- */
+
+.spacer { margin-top: 50px; }
+
+/* --- CONTAINER--- */
 
 .container{
   padding-left: 15%;
@@ -14,7 +19,14 @@ html,body
 
 .container h2 {
   font-family: 'Open Sans Condensed', sans-serif;
-  font-size: 60px;
+  font-size: 80px;
+  font-weight: bold;
+}
+
+.container h3{
+  font-family: 'Open Sans Condensed', sans-serif;
+  font-size: 40px;
+  border-bottom: 3px solid #32A3FF;
 }
 
 .container p{
@@ -27,12 +39,17 @@ html,body
   text-decoration:none;
 }
 
+.container span{
+  color: darkgrey;
+}
+
 /* --- HEADER --- */
 
 .main-header {
   width: 100%;
   max-height: 85px;
   margin: 0;
+  position: sticky;
   top: 0;
   overflow: hidden;
   border-bottom: 1px solid #e5e5e5;
@@ -41,28 +58,11 @@ html,body
   transition: all 0.3s ease 0s;
 }
 
-
-
-.header-container{
-  height: 40px;
-}
-
-
 .main-header a{
   color: inherit;
   text-decoration:none;
 }
 
-.shadow{
-  box-shadow: 1px 2px 7px rgba(0, 0, 0, .4);
-  transition: all 0.7s ease 0s;
-  border-bottom: none;
-  top: 15px;
-  border-radius: 10px;
-  position: sticky;
-  width: 90%;
-  margin: 5%;
-}
 .main-header p{
   font-family: 'News Cycle', sans-serif;
   float: right;
@@ -71,6 +71,10 @@ html,body
   padding-right: 10px;
   font-size: 30px;
   margin: 0px;
+}
+
+.header-container{
+  height: 40px;
 }
 
 .header-container p:hover{
@@ -88,7 +92,18 @@ html,body
   max-height: 40px;
 }
 
-.spacer { margin-top: 75px; }
+.shadow{
+  box-shadow: 1px 2px 7px rgba(0, 0, 0, .4);
+  transition: all 0.7s ease 0s;
+  border-bottom: none;
+  top: 15px;
+  border-radius: 10px;
+  z-index: 1;
+  width: 90%;
+  margin-left: 5%;
+  margin-right: 5%;
+}
+
 
 /* --- FOOTER --- */
 
