--- a/templates/modules/header.html
+++ b/templates/modules/header.html
@@ -19,6 +19,7 @@ $(window).scroll(function() {
 </script>
 
 <link rel="stylesheet" type="text/css" href="/static/MainStyles.css">
+<link rel="shortcut icon" type="image/x-icon" href="/static/images/Icons/SJ.ico" />
 
 <header class="main-header" role="banner">
 <div class = "header-container">
@@ -30,18 +31,8 @@ $(window).scroll(function() {
 </div>
 
 <p style = "margin-left: 10px; margin-right; 10px;">
-<a href = "/writing/">
-Writing
-</a>
-</p>
-
-<a href = "https://github.com/S-Comic">
-<p style = "margin-left: 10px; margin-right; 10px;">Coding</p>
-</a>
-
-<p style = "margin-left: 10px; margin-right; 10px;">
-<a href = "/">
-Home
+<a href="/static/files/Samuel Jule CV.pdf" download>
+Download CV
 </a>
 </p>
 
