--- a/static/MainStyles.css
+++ b/static/MainStyles.css
@@ -103,7 +103,6 @@ html,body
   margin-right: 5%;
 }
 
-
 /* --- FOOTER --- */
 
 .footer{
@@ -162,15 +161,17 @@ html,body
     padding-right: 7%;
   }
   .main-header{
-    height: 200px;
+    height: 150px;
+    max-height: 150px;
     border: none;
-    padding-left: 15%;
+    padding-left: 7%;
+    display: none;
   }
   .main-header p{
-    font-size: 50px;
-    top: 10px;
-    padding-left: 4%;
-    padding-right: 4%;
+    font-size: 70px;
+    padding-top: 30px;
+    padding-left: 5%;
+    padding-right: 5%;
     float: left;
   }
   .footer{
@@ -178,7 +179,7 @@ html,body
     line-height: 100%;
   }
   .header-continer{
-    height: 65px;
+    height: 100px;
   }
   .logo{
     display: none;
