--- a/templates/index.html
+++ b/templates/index.html
@@ -1,60 +1,87 @@
 <!doctype html>
-{% include 'modules/header.html' %}
+{% include 'modules/fonts.html' %}
+
+<!-- Credit for the gradient background goes to Ian Forrest, and credit for the social icons goes to Flaticon -->
 
 <link rel="stylesheet" type="text/css" href="/static/MainStyles.css">
 
+<div class = "scrollLock">
+<div class = "landingHeader" style = "margin: 0; padding: 0;">
+  <div class = "landingBox">
 
-<div class = "container">
+    <div class = "headerRow">
+      <h1>CALL ME SAM</h1>
+    </div>
 
-<h2>Call me Sam.</h2>
+    <div class = "headerSocial">
 
-<img src ="static\images\SamJ.png" style = "float: right; max-height: 200px; width: auto; border-radius: 15px; margin-left: 10px;"/>
-<p>I'm Samuel Jule, a year 12 student currently studying for A-Levels at Hautlieu.
-As you can probably tell by the website, I'm hugely into coding, electronics ,and anything
-even remotely technology related. I'm proficient in python, CSS and HTML, and I'm learning
-Javascript to further my knowledge. I've learnt these languages by working on projects in my
-own time, and by collaborating with others. Whenever I have free time, I'll have an IDE open.</P>
+    <div class = "icon">
+    <a href = "https://twitter.com/BritishFerrets?lang=en"> <img src = "\static\images\Icons\Twitter.png" /> </a>
+    </div>
 
-<h3>Education</h3>
-<p>
-I moved to Hautlieu in year 10, having previously attended De La Salle college.</p>
+    <div class = "icon">
+    <a href = "https://www.linkedin.com/in/samuel-jule/"> <img src = "\static\images\Icons\Linkedin.png" /> </a>
+    </div>
 
-<span>
-<p><b>De La Salle College</b> - Years 7 to 9</p>
-<p><b>Hautlieu School    </b> - Years 10 to Ongoing</p>
-</span>
+    <div class = "icon">
+    <a href = "https://github.com/S-Comic"> <img src = "\static\images\Icons\GitHub.png" /> </a>
+  </div>
 
-<h3>Academic Achievements</h3>
-<p>After completing my GCSE exams, I walked away with multiple GCSEs in my subjects,
-as well as one half-GCSE in religious studies from De La Salle College.
-<p><b>GCSE Qualifications</b></p></p>
-<p><span>Computer studies - DT Graphic Products - Business Studies - French - Physics - Chemistry - Biology - English Literature - English Language - Mathematics.</span></p></p>
-
- <p><b>AS Qualifications</b></p></p>
- <p><span>Working on it!</span></p></p>
-
-<h3>Previous work</h3>
-<p>In the past, I've worked on projects, both large and small, to further my knowledge
- and gain valuable experience.</p>
- <span>
-<p>- Starting in late 2017 I begain working with the Jersey Policy Forum
-  to aid in the development of their new webpage as a technology associate.</p>
-<p>- I worked at the Leonidas chocolate shop. I had to package and wrap products for delivery.</p>
-<p>- I helped with parking duties at Milbrook Car-boot on sundays. This included working from 7am to 1pm to divert traffic into the correct spaces.</p>
-<p>- I completed two weeks of work experience in the summer with TBC Consulting, a small software company.</p>
-</span>
-
-<h3>Personal Projects</h3>
-
-<p>I often experiment with my free time, and complete some personal projects to further my skills.</p>
-<span>
-<p>- I worked with a friend to create a custom retro games console using retro-pi software for the 2015 Youth Hackathon. The chassis of the device was laser-cut,
-  and the internals were assembled during the event. We achieved third place in the Hackathon.</p>
-<p>- I created this website, along with other small projects on my github.</p>
-<p>- I custom built my own desktop computer, and aided in the building of three other computers.</p>
-
-<div class = "spacer"></div>
+  </div>
 
 </div>
+</div>
+</div>
 
-{% include 'modules/footer.html' %}
+<div class = "contentContainer">
+  <div class = "container">
+
+    <h3>Introduction</h3>
+
+  <p>I'm Samuel Jule, a year 13 student currently studying for A-Levels at Hautlieu.
+  As you can probably tell by the website, I'm hugely into coding, electronics ,and anything
+  even remotely technology related. I'm proficient in python, CSS and HTML, and I'm learning
+  Javascript to further my knowledge. I've learnt these languages by working on projects in my
+  own time, and by collaborating with others. Whenever I have free time, I'll have an IDE open.</P>
+
+  <h3>Education</h3>
+  <p>
+  I moved to Hautlieu in year 10, having previously attended De La Salle college.</p>
+
+  <span>
+  <p><b>De La Salle College</b> - Years 7 to 9</p>
+  <p><b>Hautlieu School    </b> - Years 10 to Ongoing</p>
+  </span>
+
+  <h3>Academic Achievements</h3>
+  <p>After completing my GCSE exams, I walked away with multiple GCSEs in my subjects,
+  as well as one half-GCSE in religious studies from De La Salle College.
+  <p><b>GCSE Qualifications</b></p></p>
+  <p><span>Computer studies - DT Graphic Products - Business Studies - French - Physics - Chemistry - Biology - English Literature - English Language - Mathematics.</span></p></p>
+
+   <p><b>AS Qualifications</b></p></p>
+   <p><span>Computer studies - Design and Technology - Business Studies - Level 3 Maths</span></p></p>
+
+  <h3>Previous work</h3>
+  <p>In the past, I've worked on projects, both large and small, to further my knowledge
+   and gain valuable experience.</p>
+   <span>
+  <p>- Starting in late 2017 I begain working with the Jersey Policy Forum
+    to aid in the development of their new webpage as a technology associate.</p>
+  <p>- I worked at the Leonidas chocolate shop. I had to package and wrap products for delivery.</p>
+  <p>- I helped with parking duties at Milbrook Car-boot on sundays. This included working from 7am to 1pm to divert traffic into the correct spaces.</p>
+  <p>- I completed two weeks of work experience in the summer with TBC Consulting, a small software company.</p>
+  </span>
+
+  <h3>Personal Projects</h3>
+
+  <p>I often experiment with my free time, and complete some personal projects to further my skills.</p>
+  <span>
+  <p>- I worked with a friend to create a custom retro games console using retro-pi software for the 2015 Youth Hackathon. The chassis of the device was laser-cut,
+    and the internals were assembled during the event. We achieved third place in the Hackathon.</p>
+  <p>- I created this website, along with other small projects on my github.</p>
+  <p>- I custom built my own desktop computer, and aided in the building of three other computers.</p>
+
+
+  </div>
+</div>
