--- a/templates/modules/header.html
+++ b/templates/modules/header.html
@@ -26,7 +26,7 @@ $(window).scroll(function() {
 
 <div class = "logo">
 <a href = "\">
-<p style = "float: left; color: white; background-color: #32A3FF;">Samuel Jule</p>
+<p style = "float: left; color: white; background-color: var(--themecolor);">Samuel Jule</p>
 </a>
 </div>
 
