--- a/templates/modules/fonts.html
+++ b/templates/modules/fonts.html
@@ -1,2 +1,1 @@
-
-<link href="https://fonts.googleapis.com/css?family=Libre+Franklin|News+Cycle|Open+Sans+Condensed:300" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Raleway:100,300" rel="stylesheet">
