--- a/static/MainStyles.css
+++ b/static/MainStyles.css
@@ -251,62 +251,6 @@ animation: AnimationName 19s ease infinite;
 /* MOBILE */
 
 @media screen and (max-width: 1000px){
-  html,body
-  {
-      overflow-x: hidden;
-  }
-  .shadow{
-    width: 100%;
-    max-height: 85px;
-    margin: 0;
-    top: 0;
-    position: static;
-    overflow: hidden;
-    background-color: #fcfcfc;
-    box-shadow: none;
-    border-radius: 0px;
-    z-index: 0;
-    transition: all 0.3s ease 0s;
-  }
-  .container{
-    padding-left: 7%;
-    padding-right: 7%;
-  }
-  .main-header{
-    height: 150px;
-    max-height: 150px;
-    border: none;
-    padding-left: 7%;
-    display: none;
-  }
-  .main-header p{
-    font-size: 70px;
-    padding-top: 30px;
-    padding-left: 5%;
-    padding-right: 5%;
-    float: left;
-  }
-  .footer{
-    height: 100px;
-    line-height: 100%;
-  }
-  .header-continer{
-    height: 100px;
-  }
-  .logo{
-    display: none;
-  }
-  .Footer_Container img{
-    float: left;
-    height: 60px;
-    margin-left: 13%;
-    width: auto;
-  }
-  .Text-Left{
-    display: none;
-  }
-}
-@media screen and (max-width: 859px){
   .Footer_Container img{
     margin-left: 10%;
   }
@@ -318,13 +262,21 @@ animation: AnimationName 19s ease infinite;
     margin-right: 0;
   }
   .headerRow{
-    padding-top: 30vh;
+    padding-top: 25vh;
+  }
+  .headerSocial{
+    margin-right: 22%;
+    margin-left: 22%;
+  }
+  .headerSocial a{
+    display: block;
   }
   .headerSocial img{
     height: auto;
-    width: 50%;
-    margin-left: 25%;
-    margin-right: 25%;
+    display: block;
+    width: 60%;
+    margin-left: 20%;
+    margin-right: 20%;
     border-radius: 5px;
     padding: 5px;
     border: 2px solid white;
@@ -332,5 +284,19 @@ animation: AnimationName 19s ease infinite;
   }
   .scrollLock{
     position: absolute;
+  }
+  .landingBox h1{
+    font-family: 'Raleway', sans-serif;
+    font-size: 100px;
+    text-align: center;
+  }
+  .container h3{
+    font-size: 60px;
+    font-weight: 300;
+    border-bottom: 3px solid var(--themecolor);
+  }
+  .container{
+    padding-left: 5%;
+    padding-right: 5%;
   }
 }
