--- a/static/MainStyles.css
+++ b/static/MainStyles.css
@@ -12,43 +12,74 @@ html,body
 :root{
   --themecolor: #8792ff;
 }
+
+/* LANDING SECTION */
+
 .scrollLock{
   position: fixed;
   width: 100%;
   z-index: -1;
   top: 0;
 }
-.contentContainer{
-  background-color: white;
-  margin-left: 5%;
-  margin-right: 5%;
-  margin-top: 95vh;
-  border-radius: 20px;
+
+.landingHeader{
+  height: 100vh;
   display: block;
-  z-index: 30;
-  -webkit-box-shadow: 5px 5px 23px 1px rgba(0,0,0,0.42);
-  box-shadow: 5px 5px 23px 1px rgba(0,0,0,0.42);
-  height: auto;
+  margin: 0;
+  background: linear-gradient(270deg, #87dcff, #8792ff, #cc87ff, #ff87c3);
+  background-size: 800% 800%;
+
+  background: linear-gradient(270deg, #8792ff, #cc87ff, #ff87c3, #ff7880);
+  background-size: 800% 800%;
+
+  -webkit-animation: AnimationName 10s ease infinite;
+  -moz-animation: AnimationName 10s ease infinite;
+  animation: AnimationName 10s ease infinite;
 }
 
-.landingHeader::before{
-  filter: blur(1px);
+@-webkit-keyframes AnimationName {
+    0%{background-position:0% 50%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 50%}
 }
-.headerRow{
-  padding-top: 40vh;
-  width: 60%;
-  margin-left: 20%;
-  margin-right: 20%;
-  border-bottom: 3px solid white;
+@-moz-keyframes AnimationName {
+    0%{background-position:0% 50%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 50%}
 }
+@keyframes AnimationName {
+    0%{background-position:0% 50%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 50%}
+}
+
 .landingHeader h1{
   font-size: 60px;
   color: white;
+  font-weight:200;
   margin: 0;
   font-family: 'Raleway', sans-serif;
   text-align: center;
   letter-spacing: 8px;
 }
+
+.landingHeader::before{
+  filter: blur(1px);
+}
+
+.headerRow{
+  padding-top: 40vh;
+  width: 60%;
+  margin-left: 20%;
+  margin-right: 20%;
+  padding-bottom: 15px;
+  border-bottom: 2.5px solid white;
+}
+
+.hidden{
+  display: none !important;
+}
+
 .headerSocial{
   margin-right: 30%;
   margin-left: 30%;
@@ -73,37 +104,6 @@ html,body
 .icon{
   width: 33.3%;
 }
-.landingHeader{
-  height: 100vh;
-  display: block;
-  margin: 0;
-  background: linear-gradient(270deg, #87dcff, #8792ff, #cc87ff, #ff87c3);
-background-size: 800% 800%;
-
--webkit-animation: AnimationName 19s ease infinite;
--moz-animation: AnimationName 19s ease infinite;
-animation: AnimationName 19s ease infinite;
-}
-  @-webkit-keyframes AnimationName {
-      0%{background-position:87% 0%}
-      50%{background-position:14% 100%}
-      100%{background-position:87% 0%}
-  }
-  @-moz-keyframes AnimationName {
-      0%{background-position:87% 0%}
-      50%{background-position:14% 100%}
-      100%{background-position:87% 0%}
-  }
-  @-o-keyframes AnimationName {
-      0%{background-position:87% 0%}
-      50%{background-position:14% 100%}
-      100%{background-position:87% 0%}
-  }
-  @keyframes AnimationName {
-      0%{background-position:87% 0%}
-      50%{background-position:14% 100%}
-      100%{background-position:87% 0%}
-  }
 
 .landingBox{
   background-color: none;
@@ -115,7 +115,62 @@ animation: AnimationName 19s ease infinite;
   font-size: 60px;
   text-align: center;
 }
+
+/* FOOTER */
+
+.footerBox{
+  background-color: none;
+  width: auto;
+}
+
+.footerBox h1{
+  font-family: 'Raleway', sans-serif;
+  font-size: 60px;
+  text-align: center;
+}
+
+.myButton {
+	background-color:transparent;
+	-moz-border-radius:18px;
+	-webkit-border-radius:18px;
+	border-radius:18px;
+	border:2px solid #ffffff;
+	display:block;
+  width: 100px;
+	cursor:pointer;
+	color:#ffffff;
+  text-align: center;
+	font-family: 'Raleway', sans-serif;
+	font-size:20px;
+  font-weight: 300;
+  transition: all 0.5s ease-in-out;
+	padding:16px 31px;
+	text-decoration:none;
+}
+.myButton:hover {
+	margin-top: 15px;
+}
+.myButton:active {
+	position:relative;
+	top:1px;
+}
+
 /* --- CONTAINER--- */
+
+
+.contentContainer{
+  background-color: white;
+  margin-left: 5%;
+  margin-right: 5%;
+  margin-top: 95vh;
+  margin-bottom: 95vh;
+  border-radius: 20px;
+  display: block;
+  z-index: 30;
+  -webkit-box-shadow: 5px 5px 23px 1px rgba(0,0,0,0.42);
+  box-shadow: 5px 5px 23px 1px rgba(0,0,0,0.42);
+  height: auto;
+}
 
 .container{
   padding-top: 30px;
@@ -148,106 +203,6 @@ animation: AnimationName 19s ease infinite;
   font-weight: 300;
 }
 
-.container a{
-  color: var(--themecolor);
-  text-decoration:none;
-}
-
-
-/* --- HEADER --- */
-
-.main-header {
-  width: 100%;
-  max-height: 85px;
-  margin: 0;
-  position: sticky;
-  top: 0;
-  overflow: hidden;
-  border-bottom: 1px solid #e5e5e5;
-  background-color: #fcfcfc;
-  z-index: 0;
-  transition: all 0.3s ease 0s;
-}
-
-.main-header a{
-  color: inherit;
-  text-decoration:none;
-}
-
-.main-header p{
-  font-family: 'Raleway', sans-serif;
-  float: right;
-  padding-left: 10px;
-  border-bottom: 3px solid var(--themecolor);
-  padding-right: 10px;
-  font-size: 30px;
-  margin: 0px;
-}
-
-.header-container{
-  height: 40px;
-}
-
-.header-container p:hover{
-  color: white;
-  background-color: var(--themecolor);
-  transition: all 0.3s ease 0s;
-}
-
-.header-container img{
-  float: left;
-  padding-top: 6px;
-  padding-right: 5px;
-  padding-left: 5px;
-  max-width: 40px;
-  max-height: 40px;
-}
-
-.shadow{
-  box-shadow: 1px 2px 7px rgba(0, 0, 0, .4);
-  transition: all 0.7s ease 0s;
-  border-bottom: none;
-  top: 15px;
-  border-radius: 10px;
-  z-index: 1;
-  width: 90%;
-  margin-left: 5%;
-  margin-right: 5%;
-}
-
-/* --- FOOTER --- */
-
-.footer{
-  width: 100%;
-  height: 100px;
-  background-color: #f2f2f2;
-  bottom: 0;
-}
-
-.footer a{
-  padding-left: 10px;
-}
-
-.footer p{
-  color: #5f5f5f;
-  font-family: 'Raleway', sans-serif;
-  line-height: 50%;
-}
-
-/* --- NAVIGATION --- */
-
-.Footer_Container{
-  margin-left: 20px;
-  margin-right: 20px;
-}
-
-.Footer_Container img{
-  float: right;
-  height: 50px;
-  margin: 10px;
-  width: auto;
-}
-
 /* MOBILE */
 
 @media screen and (max-width: 1000px){
@@ -259,6 +214,7 @@ animation: AnimationName 19s ease infinite;
     margin-top: 100vh !important;
     margin-left: 0;
     border-radius: 0;
+    margin-bottom: 0;
     margin-right: 0;
   }
   .headerRow{
@@ -274,12 +230,11 @@ animation: AnimationName 19s ease infinite;
   .headerSocial img{
     height: auto;
     display: block;
-    width: 60%;
-    margin-left: 20%;
-    margin-right: 20%;
+    width: 40%;
+    margin-left: 30%;
+    margin-right: 30%;
     border-radius: 5px;
     padding: 5px;
-    border: 2px solid white;
     float: left;
   }
   .scrollLock{
@@ -287,7 +242,7 @@ animation: AnimationName 19s ease infinite;
   }
   .landingBox h1{
     font-family: 'Raleway', sans-serif;
-    font-size: 100px;
+    font-size: 80px;
     text-align: center;
   }
   .container h3{
@@ -298,5 +253,11 @@ animation: AnimationName 19s ease infinite;
   .container{
     padding-left: 5%;
     padding-right: 5%;
+  }
+  .footerBox{
+    display: none !important;
+  }
+  .landingBox{
+    display: block !important;
   }
 }
