--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
 $(window).scroll(function() {
     var headscroll = $(window).scrollTop();
 
-    if (headscroll >= 500) {
+    if (headscroll >= 700) {
         $(".landingBox").addClass("hidden");
         $(".footerBox").removeClass("hidden");
     } else {
@@ -54,6 +54,13 @@ $(window).scroll(function() {
 </div>
 
   </div>
+
+  <div class = "headerSocial">
+
+  <div style = "margin-top: 0px !important; width: 33.3%" class = "arrow">
+  <img style = "margin-top: 27vh; animation: 3s ease-in-out 0.2s infinite arrowBob;" src = "\static\images\Icons\arrow.png" />
+  </div>
+</div>
 
 </div>
 
