--- a/templates/index.html
+++ b/templates/index.html
@@ -58,7 +58,7 @@ $(window).scroll(function() {
   <div class = "headerSocial">
 
   <div style = "margin-top: 0px !important; width: 33.3%" class = "arrow">
-  <img style = "margin-top: 27vh; animation: 3s ease-in-out 0.2s infinite arrowBob;" src = "\static\images\Icons\arrow.png" />
+  <img style = "margin-top: 27vh; animation: 3s ease-in-out 0.2s infinite arrowBob;" src = "\static\images\Icons\Arrow.png" />
   </div>
 </div>
 
