Removed clickable arrow

--- a/templates/index.html
+++ b/templates/index.html
@@ -28,12 +28,6 @@ $(window).scroll(function() {
       }
 });
 
-function scrollDown() {
-  document.querySelector('.scrollTo').scrollIntoView({
-  behavior: 'smooth'
-});
-}
-
 </script>
 
 </head>
@@ -70,7 +64,7 @@ function scrollDown() {
   <div class = "headerSocial">
 
   <div style = "margin-top: 0px !important; width: 33.3%" class = "arrow">
-  <a style = "cursor: pointer;" onclick="scrollDown()"><img style = "margin-top: 27vh; animation: 3s ease-in-out 0.2s infinite arrowBob;" src = "\static\images\Icons\Arrow.png" /></a>
+ <img style = "margin-top: 27vh; animation: 3s ease-in-out 0.2s infinite arrowBob;" src = "\static\images\Icons\Arrow.png" />
   </div>
 </div>
 
