--- a/templates/index.html
+++ b/templates/index.html
@@ -122,7 +122,7 @@ $(window).scroll(function() {
     to aid in the development of their new webpage as a technology associate.</p>
   <p>- I worked at the Leonidas chocolate shop. I had to package and wrap products for delivery.</p>
   <p>- I helped with parking duties at Milbrook Car-boot on sundays. This included working from 7am to 1pm to divert traffic into the correct spaces.</p>
-  <p>- I completed two weeks of work experience in the summer with TBC Consulting, a small software company.</p>
+  <p>- I completed two weeks of work experience in the summer with TCB Consulting, a software development company.</p>
   </span>
 
   <h3>Personal Projects</h3>
